--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -1,7 +1,7 @@
 [general]
 
 project = Iconpack: Linea Icons
-description = This Extension registers an Iconpack-Provider for `EXT:iconpack` which allows you to use the "Linea Icons" in TYPO3.
+description = This Extension registers an Iconpack-Provider for EXT:iconpack which allows you to use the "Linea Icons" in TYPO3.
 version = 1.0
 release = 1.0.2
 t3author = Quellenform
